Fix center alignment of today-wrapper

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@
     display: flex;
     flex-direction: column;
     max-width: 100vw;
+    align-items: center;
   }
 
   .details-wrapper,
@@ -138,7 +139,7 @@
   }
 
   .today-wrapper {
-    /* justify-content: center; */
+    justify-items: center;
     max-width: 90%;
     flex: 1;
     max-height: 70vh;
